More cleanup and some other modules added

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "assaultjs",
   "version": "0.0.0",
   "description": "AssaultJS, a pentesting and exploiting framework.",
-  "author": "",
   "contributors": [
     "Jesus Perez <@jesusprubio> (http://jesusprubio.name)"
   ],
@@ -47,8 +46,10 @@
     "request": "^2.53.0",
     "require-directory": "^2.0.0",
     "shelljs": "^0.3.0",
+    "shodan-client": "^1.0.5",
     "tcp-ping": "^0.1.1",
-    "traceroute": "0.0.3"
+    "traceroute": "0.0.3",
+    "websocket": "^1.0.17"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
